ScarabStats: support new workload_db json and get simpoints from there support PT traces (non-simpoint) to plot

--- a/scarab_stats/scarab_stats_quick_start.ipynb
+++ b/scarab_stats/scarab_stats_quick_start.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "# Get the name of the experiment as a string, and select workloads and config(s) to plot\n",
     "experiment_name = experiment.get_experiments()[0]\n",
-    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\"]\n",
+    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\", \"cassandra\", \"drupal\", \"finagle-chirper\", \"kafka\", \"mediawiki\", \"python\", \"tomcat\"]\n",
     "configs_to_plot = [\"baseline\", \"perfect_fdip_lookahead_10000\", \"perfect_fdip_lookahead_50000\", \"perfect_fdip_lookahead_100000\"]\n",
     "\n",
     "# A statistic where you want to plot raw numbers\n",
