Fix scarab stats (#70)
* ScarabStats: support new workload_db json and get simpoints from there
support PT traces (non-simpoint) to plot

* Fix scarab_stats_quick_start.ipynb accordingly

--- a/scarab_stats/scarab_stats_quick_start.ipynb
+++ b/scarab_stats/scarab_stats_quick_start.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# Path for experiment to be saved to\n",
-    "SAVED_PATH = \"saved_experiment.csv\"\n",
+    "SAVED_PATH = \"/path/to/saved_experiment.csv\"\n",
     "\n",
     "# Save loaded experiment\n",
     "experiment.to_csv(SAVED_PATH)\n",
@@ -127,7 +127,7 @@
     "aggregator = stat_aggregator()\n",
     "\n",
     "# Path for experiment to be saved to\n",
-    "SAVED_PATH = \"saved_experiment.csv\"\n",
+    "SAVED_PATH = \"/path/to/saved_experiment.csv\"\n",
     "\n",
     "# Save loaded experiment\n",
     "experiment.to_csv(SAVED_PATH)\n",
@@ -137,17 +137,17 @@
     "\n",
     "# Get the name of the experiment as a string, and select workloads and config(s) to plot\n",
     "experiment_name = experiment.get_experiments()[0]\n",
-    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\"]\n",
+    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\", \"cassandra\", \"drupal\", \"finagle-chirper\", \"finagle-http\", \"kafka\", \"mediawiki\", \"python\", \"tomcat\"]\n",
     "configs_to_plot = [\"baseline\", \"perfect_fdip_lookahead_10000\", \"perfect_fdip_lookahead_50000\", \"perfect_fdip_lookahead_100000\"]\n",
     "\n",
     "# A statistic where you want to plot raw numbers\n",
-    "stat_to_plot = ['Periodic IPC']\n",
+    "stat_to_plot = ['Periodic_IPC']\n",
     "\n",
     "# Call the plot function\n",
     "aggregator.plot_workloads(experiment, stat_to_plot, workloads_to_plot, configs_to_plot, y_label=\"IPC\", x_label=\"Workloads\", average=True)\n",
     "\n",
     "# A statistic where you want to plot speedups\n",
-    "stat_to_plot = ['Periodic IPC']\n",
+    "stat_to_plot = ['Periodic_IPC']\n",
     "\n",
     "# Call the plot function for speedups\n",
     "aggregator.plot_workloads_speedup(experiment, stat_to_plot, workloads_to_plot, configs_to_plot, y_label=\"IPC Speedup (%)\", x_label=\"Workloads\", speedup_baseline=\"bp1\", average=True)\n"
@@ -196,7 +196,7 @@
     "\n",
     "# Get the name of the experiment as a string, and select workloads and config(s) to plot\n",
     "experiment_name = experiment.get_experiments()[0]\n",
-    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\"]\n",
+    "workloads_to_plot = [\"clang\", \"gcc\", \"mongodb\", \"mysql\", \"postgres\", \"verilator\", \"xgboost\", \"cassandra\", \"drupal\", \"finagle-chirper\", \"finagle-http\", \"kafka\", \"mediawiki\", \"python\", \"tomcat\"]\n",
     "configs_to_plot = [\"baseline\", \"perfect_fdip_lookahead_10000\", \"perfect_fdip_lookahead_50000\", \"perfect_fdip_lookahead_100000\"]\n",
     "\n",
     "# Get desired statistics\n",
@@ -259,7 +259,7 @@
     "\n",
     "# Plot previous stats and new derived stats. To plot only derived stat, remove stats_to_plot\n",
     "new_stats_to_plot = stats_to_plot + [\"MAP_STAGE_REVIEVED_OPS_ALL_COUNT\"]\n",
-    "aggregator.plot_workloads(experiment, new_stats_to_plot, workloads_to_plot, configs_to_plot, label_method=0)"
+    "aggregator.plot_workloads(experiment, new_stats_to_plot, workloads_to_plot, configs_to_plot)"
    ]
   }
  ],
