--- a/scarab_stats/scarab_stats_quick_start.ipynb
+++ b/scarab_stats/scarab_stats_quick_start.ipynb
@@ -141,13 +141,13 @@
     "configs_to_plot = [\"baseline\", \"perfect_fdip_lookahead_10000\", \"perfect_fdip_lookahead_50000\", \"perfect_fdip_lookahead_100000\"]\n",
     "\n",
     "# A statistic where you want to plot raw numbers\n",
-    "stat_to_plot = ['Periodic_IPC']\n",
+    "stat_to_plot = ['IPC']\n",
     "\n",
     "# Call the plot function\n",
     "aggregator.plot_workloads(experiment, stat_to_plot, workloads_to_plot, configs_to_plot, y_label=\"IPC\", x_label=\"Workloads\", average=True)\n",
     "\n",
     "# A statistic where you want to plot speedups\n",
-    "stat_to_plot = ['Periodic_IPC']\n",
+    "stat_to_plot = ['IPC']\n",
     "\n",
     "# Call the plot function for speedups\n",
     "aggregator.plot_workloads_speedup(experiment, stat_to_plot, workloads_to_plot, configs_to_plot, y_label=\"IPC Speedup (%)\", x_label=\"Workloads\", speedup_baseline=\"bp1\", average=True)\n"
