Fix sci compatibility and clear notebook outputs

--- a/scarab_stats/scarab_stats_quick_start.ipynb
+++ b/scarab_stats/scarab_stats_quick_start.ipynb
@@ -37,20 +37,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scripts'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Reload the stat library if it is modified\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mimportlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m reload\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscarab_stats\u001b[39;00m\n\u001b[1;32m      4\u001b[0m reload(scarab_stats)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscarab_stats\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m stat_aggregator\n",
-      "File \u001b[0;32m~/Downloads/scarab_stats.py:15\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Path\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscripts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m utilities\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_infra_root\u001b[39m() \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Path:\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Path(\u001b[38;5;18m__file__\u001b[39m)\u001b[38;5;241m.\u001b[39mresolve()\u001b[38;5;241m.\u001b[39mparent\u001b[38;5;241m.\u001b[39mparent\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scripts'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reload the stat library if it is modified\n",
     "from importlib import reload\n",
@@ -164,7 +151,7 @@
     "configs_to_plot = [\"perfect_fdip_lookahead_10000\", \"perfect_fdip_lookahead_50000\", \"perfect_fdip_lookahead_100000\"]\n",
     "\n",
     "# A statistic where you want to plot raw numbers\n",
-    "stat_to_plot = [\"Periodic_IPC\"]\n",
+    "stat_to_plot = [\"IPC\"]\n",
     "\n",
     "# Call the plot function\n",
     "aggregator.plot_workloads(experiment, stat_to_plot, workloads_to_plot, [baseline_config] + configs_to_plot, y_label=\"IPC\", x_label=\"Workloads\", average=True)\n",
